force-app/main/default/objects/agf__ADM_Work__c/fields/agf__Priority__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority__c</fullName>
    <inlineHelpText>For bugs, priority is automatically determined based upon the combination of Impact and Frequency.

For user stories, P0 represents the highest priority, P4 the lowest.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#FFFF66</color>
                <label>Alta</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#78C953</color>
                <label>Baja</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Media</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>