force-app/main/default/objects/agf__ADM_Work__c/fields/Ambito__c.field-meta.xml
<CustomField>
    <fullName>Ambito__c</fullName>
    <description>Seleccionar sistemas que, en fase de diseño, daran cobertura a la historia de usuario.</description>
    <label>Ámbito</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Siebel</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>IIR</fullName>
            </value>
            <value>
                <fullName>SKY Mobile</fullName>
            </value>
            <value>
                <fullName>SEC</fullName>
            </value>
            <value>
                <fullName>Callidus</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Capacitación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>