force-app/main/default/objects/agf__ADM_Work__c/fields/As_a_Persona__c.field-meta.xml
<CustomField>
    <fullName>As_a_Persona__c</fullName>
    <label>As a(Persona):</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Subdirector de Marketing</fullName>
            </value>
            <value>
                <fullName>Gerente de Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Analista de Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Subdirector de Transformación Digital</fullName>
            </value>
            <value>
                <fullName>Analista de Marketing</fullName>
            </value>
            <value>
                <fullName>(CC) Ejecutivo Clientes Nuevos Interno</fullName>
            </value>
            <value>
                <fullName>(CC) Supervisor Nuevos Interno</fullName>
            </value>
            <value>
                <fullName>(CC) Coordinador Nuevos Interno</fullName>
            </value>
            <value>
                <fullName>(CC) Gerente Nuevos Interno</fullName>
            </value>
            <value>
                <fullName>(CC) Ejecutivos Clientes Activos Interno</fullName>
            </value>
            <value>
                <fullName>(CC) Supervisor Activos Interno</fullName>
            </value>
            <value>
                <fullName>(CC) Coordinador Activos Interno</fullName>
            </value>
            <value>
                <fullName>(CC) Gerente Activos Interno</fullName>
            </value>
            <value>
                <fullName>(CC) Subdirector</fullName>
            </value>
            <value>
                <fullName>(CC) Ejecutivo Clientes Nuevos Externo</fullName>
            </value>
            <value>
                <fullName>(VD) Gerente POS</fullName>
            </value>
            <value>
                <fullName>(VD) Gerente CAM</fullName>
            </value>
            <value>
                <fullName>(VD) Gerente MDU</fullName>
            </value>
            <value>
                <fullName>(VD) Distribuidor Gerente/Ejecutivo</fullName>
            </value>
            <value>
                <fullName>(MA) Subdirector</fullName>
            </value>
            <value>
                <fullName>(MA) Regional</fullName>
            </value>
            <value>
                <fullName>(MA) Gerente ejecutivo</fullName>
            </value>
            <value>
                <fullName>(MA) Estatal</fullName>
            </value>
            <value>
                <fullName>(MA) Distribuidor</fullName>
            </value>
            <value>
                <fullName>(MA) Ejecutivo ciudad</fullName>
            </value>
            <value>
                <fullName>(MA) Subdistribuidor</fullName>
            </value>
            <value>
                <fullName>(AC) Gerencia</fullName>
            </value>
            <value>
                <fullName>(AC) Coordinacion</fullName>
            </value>
            <value>
                <fullName>(AC) Supervisor Activaciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>