force-app/main/default/objects/agf__ADM_Work__c/fields/Plataforma__c.field-meta.xml
<CustomField>
    <fullName>Plataforma__c</fullName>
    <label>Plataforma</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Movil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>