force-app/main/default/objects/agf__ADM_Work__c/fields/So_that_What__c.field-meta.xml
<CustomField>
    <fullName>So_that_What__c</fullName>
    <label>So that(What)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conciliar información</fullName>
            </value>
            <value>
                <fullName>Estabilidad de sistemas</fullName>
            </value>
            <value>
                <fullName>Validación contratos. (Post)</fullName>
            </value>
            <value>
                <fullName>Diferencia proceso MX y CA.</fullName>
            </value>
            <value>
                <fullName>Prospección lenta en SEC</fullName>
            </value>
            <value>
                <fullName>Eliminar cobro por tecnico</fullName>
            </value>
            <value>
                <fullName>Cobertura BT internet</fullName>
            </value>
            <value>
                <fullName>Publicidad cooperativa para apoyo de distribuidores</fullName>
            </value>
            <value>
                <fullName>Nula Visibilidad en stock y desabasto materiales</fullName>
            </value>
            <value>
                <fullName>Ausencia de datos</fullName>
            </value>
            <value>
                <fullName>Mala experiencia de cliente</fullName>
            </value>
            <value>
                <fullName>No hay seguimiento de casos</fullName>
            </value>
            <value>
                <fullName>No hay lealtad a la marca</fullName>
            </value>
            <value>
                <fullName>No hay comunicación de beneficios</fullName>
            </value>
            <value>
                <fullName>Facilidad de compra</fullName>
            </value>
            <value>
                <fullName>No hay personalización de contenido</fullName>
            </value>
            <value>
                <fullName>Mejorar desempeño de los sistemas</fullName>
            </value>
            <value>
                <fullName>Mejorar la productividad</fullName>
            </value>
            <value>
                <fullName>Falta de visibilidad de conversaciones en RS</fullName>
            </value>
            <value>
                <fullName>No hay visibilidad para toma de decisiones</fullName>
            </value>
            <value>
                <fullName>Documental</fullName>
            </value>
            <value>
                <fullName>Complejidad manejo Presupuesto</fullName>
            </value>
            <value>
                <fullName>Administracion manual</fullName>
            </value>
            <value>
                <fullName>No captura prospectos</fullName>
            </value>
            <value>
                <fullName>Carencia Seguimiento</fullName>
            </value>
            <value>
                <fullName>Multiples fronts</fullName>
            </value>
            <value>
                <fullName>Malad calidad de datos</fullName>
            </value>
            <value>
                <fullName>Asignacion de Cuotas</fullName>
            </value>
            <value>
                <fullName>Complejidad Alta Distribuidor</fullName>
            </value>
            <value>
                <fullName>MDU no identificados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>