force-app/main/default/objects/agf__ADM_Work__c/fields/Technical_Definition__c.field-meta.xml
<CustomField>
    <fullName>Technical_Definition__c</fullName>
    <label>Technical Definition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>