force-app/main/default/objects/agf__ADM_Work__c/recordTypes/agf__ToDo.recordType-meta.xml
<RecordType>
    <fullName>agf__ToDo</fullName>
    <active>true</active>
    <description>Used to track a unit of work that does not need to have anything checked into Source Control nor does it need to have auto assignment rules applied</description>
    <label>ToDo</label>
</RecordType>