force-app/main/default/objects/agf__ADM_Work__c/recordTypes/agf__User_Story.recordType-meta.xml
<RecordType>
    <fullName>agf__User_Story</fullName>
    <active>true</active>
    <description>Used to create feature requests. You are able to check in code against the user story record.</description>
    <label>User Story</label>
</RecordType>