force-app/main/default/objects/agf__ADM_Work__c/listViews/Historias_en_Backlog.listView-meta.xml
<ListView>
    <fullName>Historias_en_Backlog</fullName>
    <columns>NAME</columns>
    <columns>agf__Subject__c</columns>
    <columns>agf__Theme__c</columns>
    <columns>agf__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Sprint__c</field>
        <operation>startsWith</operation>
        <value>2019.09 SKY P&amp;D Backlog</value>
    </filters>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>SKY CRM SFDC P&amp;D</value>
    </filters>
    <label>Historias en Backlog Ventas</label>
</ListView>