force-app/main/default/objects/agf__ADM_Work__c/listViews/Historias_Ventas_Fase_1.listView-meta.xml
<ListView>
    <fullName>Historias_Ventas_Fase_1</fullName>
    <columns>NAME</columns>
    <columns>agf__Subject__c</columns>
    <columns>agf__Record_Type__c</columns>
    <columns>agf__Priority__c</columns>
    <columns>agf__Sprint__c</columns>
    <columns>agf__Theme__c</columns>
    <columns>agf__Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>SKY CRM SFDC P&amp;D</value>
    </filters>
    <filters>
        <field>agf__Sprint__c</field>
        <operation>equals</operation>
        <value>2019.09 - SKY PD alcance (Fase 1)</value>
    </filters>
    <label>Historias Ventas Fase 1</label>
</ListView>