force-app/main/default/objects/agf__ADM_Work__c/listViews/Marketing_Cloud.listView-meta.xml
<ListView>
    <fullName>Marketing_Cloud</fullName>
    <columns>NAME</columns>
    <columns>agf__Subject__c</columns>
    <columns>agf__Record_Type__c</columns>
    <columns>agf__Priority__c</columns>
    <columns>agf__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>SKY CRM MKT P&amp;D</value>
    </filters>
    <label>Historias Marketing</label>
</ListView>